--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -14,13 +14,13 @@ body {
     justify-content: center;
     align-items: center;
     font-family: 'League Spartan', sans-serif;
+    overflow-y: auto;
 }
 
 .calculator {
     width: 550px;
     height: 600px;
     padding: 20px;
-    border: 1px solid;
 }
 
 .calculator .headerContainer {
@@ -54,15 +54,17 @@ body {
     align-items: center;
 }
 
-.calculator .headerContainer .modeContainer .mode .modeNum{
+.calculator .headerContainer .modeContainer .mode .modeNum {
     width: 100%;
     margin-bottom: 10px;
     text-align: center;
 }
-.calculator .headerContainer .modeContainer .mode .modeNum span{
+
+.calculator .headerContainer .modeContainer .mode .modeNum span {
     cursor: pointer;
 }
-.calculator .headerContainer .modeContainer .mode .modeNum .secondTheme{
+
+.calculator .headerContainer .modeContainer .mode .modeNum .secondTheme {
     margin: 0 10px;
 }
 
@@ -74,7 +76,8 @@ body {
     position: relative;
     cursor: pointer;
 }
-.calculator .headerContainer .modeContainer .mode .pickMode .circle{
+
+.calculator .headerContainer .modeContainer .mode .pickMode .circle {
     width: 14px;
     height: 14px;
     border-radius: 50%;
@@ -84,21 +87,82 @@ body {
     left: 3px;
     transform: translateY(-50%);
 }
-.calculator .screen{
+
+.calculator .screen {
     padding: 10px 20px;
     width: 100%;
     height: 100px;
     margin: 20px 0;
     color: #fff;
     background-color: #182034;
+    border-radius: 5px;
     font-size: 3.5em;
     display: flex;
     justify-content: end;
     align-items: center;
     overflow: hidden;
 }
-.calculator .keyPad{
+
+.calculator .keyPad {
     width: 100%;
     height: 370px;
     background-color: #232c43;
+    border-radius: 5px;
 }
+
+.calculator .keyPad .row {
+    width: 100%;
+    height: calc(370px / 5);
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.calculator .keyPad .row .key {
+    width: 20%;
+    height: 50px;
+    border-radius: 5px;
+    font-size: 1.5em;
+    background-color: #eae3dc;
+    color: #444b5a;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.calculator .keyPad .row .key.del {
+    text-transform: uppercase;
+    color: #fff;
+    background-color: #637097;
+}
+
+.calculator .keyPad .row .key.additonRotate span {
+    transform: rotate(46deg);
+}
+
+.calculator .keyPad .row .bottomKey {
+    width: 45%;
+    height: 45px;
+    text-align: center;
+    border-radius: 5px;
+    font-size: 1.5em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.calculator .keyPad .row .reset {
+    color: #fff;
+    text-transform: uppercase;
+    background-color: #637097;
+}
+
+.calculator .keyPad .row .quality {
+    color: #fff;
+    background-color: #d03f2f;
+}
+
+/* responsive */
