CSS: modification on the screen class name. JS: finish the main script to do the math operations.

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -100,7 +100,7 @@ body {
     display: flex;
     justify-content: end;
     align-items: center;
-    overflow: hidden;
+    overflow-x: auto;
 }
 
 .calculator .keyPad {
@@ -168,5 +168,3 @@ body {
     box-shadow: 0px 3px 2px #93261a;
     pointer-events: all;
 }
-
-/* responsive */
