--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -38,6 +38,7 @@ body {
 .calculator .headerContainer .modeContainer {
     width: 170px;
     height: 50px;
+    margin-bottom: 5px;
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
